--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -4,7 +4,7 @@
 
 #app-root-2023-palestine_report .app {
   font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: auto auto;
+  margin: 20px auto;
   max-width: 900px;
   select {
     margin: auto auto 10px auto;
@@ -12,6 +12,12 @@
     option {
       font-size: 16px;
     }
+  }
+  hr {
+    border-color: #eee;;
+    border-style: solid;
+    border-width: 1px 0 0 0;
+    margin: auto auto 5px auto;
   }
   h3 {
     margin: auto auto 5px auto;
